# search-engine

./: .env  .envrc  .gitignore  Caddyfile  README.md  compose.yaml  devenv.nix  domain_list.txt  pyproject.toml
engine-tt/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  compose.yaml  out  out.json
engine-tt/src/: docs.rs  index.rs  main.rs
frontend/: Dockerfile  bun.lockb  index.css  index.html  package.json
frontend/src/: main.tsx
frontend/src/routes/: __root.tsx  index.tsx
scraper/: .envrc  .gitignore  Dockerfile  pyproject.toml  requirements.txt  run.py  scrapyd.conf  setup.py
scraper/scraper/: items.py  middlewares.py  pipelines.py  settings.py
scraper/scraper/spiders/: angular.py  generic.py
scraper/scripts/: run_list.py
scripts/: process_output.py  run_list.py  time.sh
