[package]
name = "engine-tt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "engine-tt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
serde = { version = "1.0.216", features = ["derive"] }
tantivy = "0.22.0"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
