[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["ridho9 <p.ridho9@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.12.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
requests = "^2.32.3"
scrapyd-client = "^2.0.0"
trafilatura = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
